# market_evaluator

./: .env.example  Dockerfile  README.md  daily_model_report.md  debug_price.py  debug_sold.html  debug_sold.py  docker-compose.yml  schema_reset.sql  schema_v2.sql
backend/: add_missing_card_columns.py  analyze_active_listings.py  analyze_player.py  analyze_supply.py  apply_performance_schema.py  apply_schema.py  apply_tiered_refresh_schema.py  assign_refresh_tiers.py  assign_sentinels.py  audit_epids.py  backfill_epids.py  calc_daily_price.py  calc_daily_supply.py  check_schema.py  clean_and_check_cards.py  count_cards.py  database.py  (+28 more)
scrapers/: add_card.py  analyze_gemrate_data.py  daily_sync_listings.py  debug_check_pop.py  debug_finding.py  debug_gemrate_dump.py  debug_jayden_features.py  debug_leak.py  debug_scp_selector.py  debug_script_17.js  debug_set_console.py  ebay_service.py  fetch_active_by_set.py  fetch_active_listings.py  fetch_illusions_listings.py  fetch_sales.py  fetch_sales_variant.py  fetch_sentinel_sold.py  find_epid.py  generate_synthetic_data.py  inspect_epid_browse.py  process_sold_data.py  pyproject.toml  refresh_listings.py  scrape_set.py  scrape_sportscardspro.py  temp_scp.html  test_browse_sold.py  test_collection.py  test_complete_summary.py  test_drake_maye.py  test_ebay_auctions.py  test_ebay_bin.py  test_ebay_production.py  test_ebay_sandbox.py  test_gemrate.py  test_organized_listings.py  test_pop_sources.py  test_psa_navigate.py  test_psa_scraper.py  (+7 more)
scrapers/src/: __init__.py  card_matcher.py  db.py  ebay_client.py  psa_scraper.py
(+13 files in other folders)
